[package]
name = "yahoo_fantasysport"
version = "0.1.0"
authors = ["Band Protocol <dev@bandprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
owasm2 = { version = "0.1.8"}
obi = { version = "0.0.2" }
lazy_static = "1.4.0"

